# Information_Transformation_Algorithms_Task04

./: .gitignore  Cargo.toml
src/: main.rs
zwl/: Cargo.toml
zwl/src/: bit_decoder.rs  bit_encoder.rs  dictionary.rs  lib.rs  like_u12.rs  like_u16.rs  like_u32.rs  like_u64.rs  naive_encoder_decoder.rs  traits.rs
